samples/_failures_safe/1761129138_54b5d1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_29611683.c: In function ‘main’:
./samples/SAFE/__tmp_29611683.c:178:24: error: missing terminating " character
  178 |                 printf("Invalid choice.\
      |                        ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_29611683.c:178:17: error: expected expression at end of input
  178 |                 printf("Invalid choice.\
      |                 ^~~~~~
./samples/SAFE/__tmp_29611683.c:178:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_29611683.c:178:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_29611683.c:178:17: error: expected declaration or statement at end of input
